fixed an issue here member dropdown when creating a project did not align during animation

--- a/app/src/sites/sites.scss
+++ b/app/src/sites/sites.scss
@@ -394,6 +394,9 @@ md-card-title h3 {
       margin-right: 40px;
       margin-left: 40px;
     }
+    .md-chip-input-container {
+      width: 100%;
+    }
   }
   md-input-container {
     margin: $u*0.5 0;
